--- a/views/landing/index.ejs
+++ b/views/landing/index.ejs
@@ -146,7 +146,7 @@
         R$ <%= produtoMaisVendido ? produtoMaisVendido.valor_custo : '0,00' %>
       </span>
       <span class="bg-secondary text-primary text-xs font-bold px-3 py-1 rounded-full bg-blue-100 text-blue-700">
-        Mais Vendido
+       ★ Mais Vendido
       </span>
     </div>
   </div>
